add some new thing.

--- a/hello.html
+++ b/hello.html
@@ -7,5 +7,6 @@ Hello, World! <br/>
 This is gitk demo.
 master: add some thing.
 issue-01: add some something.
+issue-01: add some new thing.
 </body>
 </html>
